# sdl-game-demo

./: .clang_complete  .gitignore  CMakeLists.txt
helpers/: join_clang.sh  make_build_dir.sh
res/src/: buttons.xcf  game_over.xcf
src/: AnimatedGraphic.cpp  Enemy.cpp  Game.cpp  GameObject.cpp  GameOverState.cpp  GameStateMachine.cpp  InputHandler.cpp  MenuButton.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  SDLGameObject.cpp  TextureManager.cpp  Vector2D.cpp  main.cpp
src/include/: AnimatedGraphic.hpp  Enemy.hpp  Game.hpp  GameObject.hpp  GameOverState.hpp  GameState.hpp  GameStateMachine.hpp  InputHandler.hpp  LoaderParams.hpp  MenuButton.hpp  MenuState.hpp  PauseState.hpp  PlayState.hpp  Player.hpp  SDLGameObject.hpp  TextureManager.hpp  Vector2D.hpp
